--- a/app/views/memos/new.html.slim
+++ b/app/views/memos/new.html.slim
@@ -1,5 +1,5 @@
-h1 New memo
+h1 #{Memo.model_name.human}の作成
 
 == render 'form'
 
-= link_to 'Back', memos_path
+= link_to '戻る', memos_path, class: 'btn btn-default'
