登録できる種別を制限した

--- a/app/views/memos/_form.html.slim
+++ b/app/views/memos/_form.html.slim
@@ -8,7 +8,7 @@
 
   .form-group
     = f.label :kind
-    = f.text_field :kind, class: 'form-control'
+    = f.select :kind, Memo.kind.options, {}, class: 'form-control'
   .form-group
     = f.label :content
     = f.text_field :content, class: 'form-control'
