ふりかえりページを作成

--- a/app/views/memos/index.html.slim
+++ b/app/views/memos/index.html.slim
@@ -21,3 +21,4 @@ table.table
 br
 
 = link_to 'あたらしいメモ', new_memo_path, class: 'btn btn-primary'
+= link_to 'ふりかえる', current_memos_path, class: 'btn btn-default'
