--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -11,7 +11,10 @@
  * file per style scope.
  *
  *= require_tree .
- *= require bootstrap-sass-official
  *= require fontawesome
  *= require_self
  */
+
+$icon-font-path: "bootstrap-sass-official/"
+@import "bootstrap-sass-official/bootstrap-sprockets"
+@import "bootstrap-sass-official/bootstrap"
